@@ -1,4 +1,4 @@
-/* $Id: acl.c,v 1.34 2006/09/04 21:28:18 manu Exp $ */
+/* $Id: acl.c,v 1.33.2.1 2006/09/04 22:07:21 manu Exp $ */
 
 /*
  * Copyright (c) 2004 Emmanuel Dreyfus
@@ -34,7 +34,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID
-__RCSID("$Id: acl.c,v 1.34 2006/09/04 21:28:18 manu Exp $");
+__RCSID("$Id: acl.c,v 1.33.2.1 2006/09/04 22:07:21 manu Exp $");
 #endif
 #endif
 
