@@ -1,4 +1,4 @@
-/* $Id: list.c,v 1.10 2006/09/04 21:28:18 manu Exp $ */
+/* $Id: list.c,v 1.9.2.1 2006/09/04 22:07:21 manu Exp $ */
 
 /*
  * Copyright (c) 2006 Emmanuel Dreyfus
@@ -34,7 +34,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID
-__RCSID("$Id: list.c,v 1.10 2006/09/04 21:28:18 manu Exp $");
+__RCSID("$Id: list.c,v 1.9.2.1 2006/09/04 22:07:21 manu Exp $");
 #endif
 #endif
 
