@@ -1,4 +1,5 @@
 3.0a6
+	Fix serious bugs in macro handling (AIDA Shinra)
 	Back out race conditions fixes (too intrusive, will be back in 3.1.x)
 	Fix build warning on Tru64
 	Build fix on Solaris
